--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             return;
         }
 
-        await LoadWebcams();
+        //await LoadWebcams();
         document.getElementById("startARButton").style.visibility = "visible";
 
         window.camPermissionsGranted = await IsCameraPermissionGranted();
